k8s-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assignment-app
  template:
    metadata:
      labels:
        app: assignment-app
    spec:
      containers:
      - name: app
        image: ps95adagher/assignment:250601-391af902
        ports:
        - containerPort: 8090
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8090
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8090
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: scripts
        configMap:
          name: check-db
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: assignment-service    
spec:
  selector:
    app: assignment-app
  ports:
    - port: 80
      targetPort: 8090
  type: NodePort
